--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
 
 
     <div class="info">
-		<div style="width=100%;height:400px;">
+		<div style="width=100%;height:500px;">
 			<div id="map" style="width=100%;height:400px;"></div>
 			<div style="display: none;">
 				<div id="popup" title="KML"></div>
+			</div>
+			<div class="span4 offset4">
+			  <div id="info" class="alert alert-success">
+				&nbsp;
+			  </div>
 			</div>
 		</div>
 
@@ -67,8 +72,9 @@
 
   </div>
 </body>
-<script src="//code.jquery.com/jquery-1.10.1.min.js"></script>
+<script src="jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
-<script src="https://api3.geo.admin.ch/loader.js?lang=en" type="text/javascript"></script> 
+<!--script src="https://api3.geo.admin.ch/loader.js?lang=en" type="text/javascript"></script--> 
+<script src="./loader.js?id=jppcp_kml" type="text/javascript"></script>
 <script src="jppcp_kml.js" type="text/javascript"></script>
 </html>
