--- a/index.html
+++ b/index.html
@@ -76,5 +76,5 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 <!--script src="https://api3.geo.admin.ch/loader.js?lang=en" type="text/javascript"></script--> 
 <script src="./loader.js?id=jppcp_kml" type="text/javascript"></script>
-<script src="jppcp_kml.js" type="text/javascript"></script>
+<!--script src="jppcp_kml.js" type="text/javascript"></script-->
 </html>
