added some infos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 		  <h3>01.03.2014 00:00</h3>
           <p class="success">Peaks catched: 0 (0%)</p>
           <p class="warning">Peaks to catch: 65 (100%)</p>
+		  <h2>Regeln</h2>
+          <p class="">Als Berge zählen alle topografischen Erhebungen welche über 500 m.ü.M. liegen und auf der Landeskarte benannt sind.</p>
+          <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
+          <p class="">Der Challenge endet am 31.10.2014 24:00 Uhr.</p>
         </div>
 
      </div>   
