--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</div>
 
         <div class="col_66">
-          <h2>Letzte "Catches"</h2>
+          <h2>"Catches" Blog</h2>
 		  <b>24.02.2014</b>  Am Samstag gehts los! 	
         </div>
 
