--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <b>24.02.2014</b>  Am Samstag gehts los! 	
+		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off über vier "Chöttiger"<BR></p>
+		  <p class="success"><b>24.02.2014</b>  Am Samstag gehts los! </p>	
         </div>
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>01.03.2014 00:00</h3>
-          <p class="success">Peaks catched: 0 (0%)</p>
-          <p class="warning">Peaks to catch: 65 (100%)</p>
+		  <h3>02.03.2014 16:22</h3>
+          <p class="success">Peaks catched: 4 (6%)</p>
+          <p class="warning">Peaks to catch: 61 (94%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche über 500 m.ü.M. liegen und auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
