--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off über vier "Chöttiger"<BR></p>
 		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off über vier "Chöttiger"<BR></p>
 		  <p class="success"><b>24.02.2014</b>  Am Samstag gehts los! </p>	
         </div>
@@ -53,8 +54,8 @@
         <div class="col_33">
           <h2>Aktueller Stand</h2>
 		  <h3>02.03.2014 16:22</h3>
-          <p class="success">Peaks catched: 4 (6%)</p>
-          <p class="warning">Peaks to catch: 61 (94%)</p>
+          <p class="success">Peaks catched: 6 (9%)</p>
+          <p class="warning">Peaks to catch: 59 (91%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche über 500 m.ü.M. liegen und auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
