--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off über vier "Chöttiger"<BR></p>
+		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140309.jpg"> Erster Catch mit dem Bike und die Ruine Schenkenberg als AAA-Kinderspielplatz entdeckt!<BR></p>
 		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off über vier "Chöttiger"<BR></p>
 		  <p class="success"><b>24.02.2014</b>  Am Samstag gehts los! </p>	
         </div>
