--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140309.jpg"> Erster Catch mit dem Bike und die Ruine Schenkenberg als AAA-Kinderspielplatz entdeckt!<BR></p>
-		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off über vier "Chöttiger"<BR></p>
+		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140309.jpg"> Erster Catch mit dem Bike, in der Sonne und die Ruine Schenkenberg als AAA-Kinderspielplatz entdeckt!<BR></p>
+		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off zu Fuss über vier "Chöttiger"<BR></p>
 		  <p class="success"><b>24.02.2014</b>  Am Samstag gehts los! </p>	
         </div>
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>02.03.2014 16:22</h3>
+		  <h3>09.03.2014 20:08</h3>
           <p class="success">Peaks catched: 6 (9%)</p>
           <p class="warning">Peaks to catch: 59 (91%)</p>
 		  <h2>Regeln</h2>
