--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <p class="success"><b>16.03.2014</b><BR><img src=""> Wunder-Tour über den Strihen-Densbüren-Ruine Urgiz-Würz-Staffelegg. Zwar nur zwei Peaks, aber viel schöne Ecken entdeckt.<BR></p>
+		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"> Heute haben die Wanderer gebaslered. Super Erkundungstour über den Forenberg und eine unglaubliche Begegnugn auf der Ruinde Alt Kienberg.<BR></p>
+		  <p class="success"><b>16.03.2014</b><BR><img src="./data/pics/20140316.jpg"> Wunder-Tour über den Strihen-Densbüren-Ruine Urgiz-Würz-Staffelegg. Zwar nur zwei Peaks, aber viel schöne Ecken entdeckt.<BR></p>
 		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140309.jpg"> Erster Catch mit dem Bike, in der Sonne und die Ruine Schenkenberg als AAA-Kinderspielplatz entdeckt!<BR></p>
 		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"> Kick-Off zu Fuss über vier "Chöttiger"<BR></p>
 		  <p class="success"><b>24.02.2014</b>  Am Samstag gehts los! </p>	
@@ -54,9 +55,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>16.03.2014 20:08</h3>
-          <p class="success">Peaks catched: 8 (11%)</p>
-          <p class="warning">Peaks to catch: 57 (89%)</p>
+		  <h3>30.03.2014 20:40</h3>
+          <p class="success">Peaks catched: 12 (19%)</p>
+          <p class="warning">Peaks to catch: 53 (81%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche über 500 m.ü.M. liegen und auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
