--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"><BR>Heute haben die Wanderer gebaslered und ich meine Karte verloren. Es war trotzdem eine Super Erkundungstour auf den bisher unbekannten Forenberg mit einer unglaublichen Begegnung auf der Ruinde Alt Kienberg, drei Catches zu Fuss und einem falschen Peak. Auf die richtige Schnäpfelflue muess ich nochmals....<BR></p>
+		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"><BR>Heute haben die Wanderer gebaslered und ich meine Karte verloren. Auch das GPS verabschiedete sich nach 14km. Es war trotzdem eine Super Erkundungstour auf den bisher unbekannten Forenberg mit einer unglaublichen Begegnung auf der Ruinde Alt Kienberg, drei Catches zu Fuss und einem falschen Peak (grrr). Auf die richtige Schnäpfelflue muess ich nochmals....<BR></p>
 		  <p class="success"><b>16.03.2014</b><BR><img src="./data/pics/20140316.jpg"><BR>Wunder-Tour über den Strihen-Densbüren-Ruine Urgiz-Würz-Staffelegg. Zwar nur zwei Peaks, aber viel schöne Ecken entdeckt.<BR></p>
 		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140309.jpg"><BR>Erster Catch mit dem Bike, in der Sonne und die Ruine Schenkenberg als AAA-Kinderspielplatz entdeckt!<BR></p>
 		  <p class="success"><b>02.03.2014</b><BR><img src="./data/pics/20140302.jpg"><BR>Kick-Off zu Fuss über vier "Chöttiger"<BR></p>
