--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <p class="success"><b>06.04.2014</b><BR><img src="./data/pics/20140406.jpg"><BR>Bözberg-Rundfahrt mit 2 flachen und 2 spitzigen Peaks und einem 20er-Schnitt.<BR></p>
 		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"><BR>Heute haben die Wanderer gebaslered und ich meine Karte verloren. Auch das GPS verabschiedete sich nach 14km. Es war trotzdem eine Super Erkundungstour auf den bisher unbekannten Forenberg mit einer unglaublichen Begegnung auf der Ruinde Alt Kienberg, drei Catches zu Fuss und einem falschen Peak (grrr). Auf die richtige Schnäpfelflue muess ich nochmals....<BR></p>
 		  <p class="success"><b>16.03.2014</b><BR><img src="./data/pics/20140316.jpg"><BR>Wunder-Tour über den Strihen-Densbüren-Ruine Urgiz-Würz-Staffelegg. Zwar nur zwei Peaks, aber viel schöne Ecken entdeckt.<BR></p>
 		  <p class="success"><b>09.03.2014</b><BR><img src="./data/pics/20140309.jpg"><BR>Erster Catch mit dem Bike, in der Sonne und die Ruine Schenkenberg als AAA-Kinderspielplatz entdeckt!<BR></p>
@@ -55,11 +56,11 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>30.03.2014 20:40</h3>
-          <p class="success">Peaks catched: 11 (17%)</p>
-          <p class="warning">Peaks to catch: 54 (83%)</p>
+		  <h3>06.04.2014 20:42</h3>
+          <p class="success">Peaks catched: 15 (22%)</p>
+          <p class="warning">Peaks to catch: 51 (78%)</p>
 		  <h2>Regeln</h2>
-          <p class="">Als Berge zählen alle topografischen Erhebungen welche über 500 m.ü.M. liegen und auf der Landeskarte benannt sind.</p>
+          <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
           <p class="">Der Challenge endet am 31.10.2014 24:00 Uhr.</p>
         </div>
