--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <p class="success"><b>09.04.2014</b><BR><img src="./data/pics/20140409.jpg"><BR>Feierabend-Runde auf den höchsten Aargauer Berg - schönes Wetter, schöner Berg, schöne Abfahrt und 1 Peak weniger.<BR></p>
 		  <p class="success"><b>06.04.2014</b><BR><img src="./data/pics/20140406.jpg"><BR>Bözberg-Rundfahrt mit 2 flachen und 2 spitzigen Peaks und einem 20er-Schnitt.<BR></p>
 		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"><BR>Heute haben die Wanderer gebaslered und ich meine Karte verloren. Auch das GPS verabschiedete sich nach 14km. Es war trotzdem eine Super Erkundungstour auf den bisher unbekannten Forenberg mit einer unglaublichen Begegnung auf der Ruinde Alt Kienberg, drei Catches zu Fuss und einem falschen Peak (grrr). Auf die richtige Schnäpfelflue muess ich nochmals....<BR></p>
 		  <p class="success"><b>16.03.2014</b><BR><img src="./data/pics/20140316.jpg"><BR>Wunder-Tour über den Strihen-Densbüren-Ruine Urgiz-Würz-Staffelegg. Zwar nur zwei Peaks, aber viel schöne Ecken entdeckt.<BR></p>
@@ -56,9 +57,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>06.04.2014 20:42</h3>
-          <p class="success">Peaks catched: 15 (22%)</p>
-          <p class="warning">Peaks to catch: 53 (78%)</p>
+		  <h3>09.04.2014 21:52</h3>
+          <p class="success">Peaks catched: 16 (23%)</p>
+          <p class="warning">Peaks to catch: 52 (77%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
