--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -46,6 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <p class="success"><b>13.04.2014</b><BR><img src="./data/pics/20140413.jpg"><BR>Aus dem alten Kienberger Gips-Bruch ergibt sich ein Blick wie in Kanada. Super-Tour mit feinen, stillen Single-Trails und saftigen Aufstiegen.<BR></p>
 		  <p class="success"><b>09.04.2014</b><BR><img src="./data/pics/20140409nn.jpg"><BR>Feierabend-Runde auf den höchsten Aargauer Berg - schönes Wetter, schöner Berg, schöne Abfahrt und 1 Peak weniger.<BR></p>
 		  <p class="success"><b>06.04.2014</b><BR><img src="./data/pics/20140406.jpg"><BR>Bözberg-Rundfahrt mit 2 flachen und 2 spitzigen Peaks und einem 20er-Schnitt.<BR></p>
 		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"><BR>Heute haben die Wanderer gebaslered und ich meine Karte verloren. Auch das GPS verabschiedete sich nach 14km. Es war trotzdem eine Super Erkundungstour auf den bisher unbekannten Forenberg mit einer unglaublichen Begegnung auf der Ruinde Alt Kienberg, drei Catches zu Fuss und einem falschen Peak (grrr). Auf die richtige Schnäpfelflue muess ich nochmals....<BR></p>
@@ -57,9 +58,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>09.04.2014 21:52</h3>
-          <p class="success">Peaks catched: 16 (23%)</p>
-          <p class="warning">Peaks to catch: 52 (77%)</p>
+		  <h3>13.04.2014 14:12</h3>
+          <p class="success">Peaks catched: 19 (28%)</p>
+          <p class="warning">Peaks to catch: 49 (72%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
