--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <p class="success"><b>13.04.2014</b></p><BR><table><tr><td><img src="./data/pics/20140413.jpg"></td><td>Aus dem alten Kienberger Gips-Bruch ergibt sich ein Blick wie in Kanada. Super-Tour mit feinen, stillen Single-Trails und saftigen Aufstiegen.</td></tr>
+		  <p class="success"><b>13.04.2014</b><BR><table><tr><td><img src="./data/pics/20140413.jpg"></td><td>Aus dem alten Kienberger Gips-Bruch ergibt sich ein Blick wie in Kanada. Super-Tour mit feinen, stillen Single-Trails und saftigen Aufstiegen.</td></tr></table></p>
 		  <p class="success"><b>09.04.2014</b><BR><img src="./data/pics/20140409nn.jpg"><BR>Feierabend-Runde auf den höchsten Aargauer Berg - schönes Wetter, schöner Berg, schöne Abfahrt und 1 Peak weniger.<BR></p>
 		  <p class="success"><b>06.04.2014</b><BR><img src="./data/pics/20140406.jpg"><BR>Bözberg-Rundfahrt mit 2 flachen und 2 spitzigen Peaks und einem 20er-Schnitt.<BR></p>
 		  <p class="success"><b>30.03.2014</b><BR><img src="./data/pics/20140330.jpg"><BR>Heute haben die Wanderer gebaslered und ich meine Karte verloren. Auch das GPS verabschiedete sich nach 14km. Es war trotzdem eine Super Erkundungstour auf den bisher unbekannten Forenberg mit einer unglaublichen Begegnung auf der Ruinde Alt Kienberg, drei Catches zu Fuss und einem falschen Peak (grrr). Auf die richtige Schnäpfelflue muess ich nochmals....<BR></p>
