--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <table class="success"><tr><td><img src="./data/pics/20140501.jpg"></td><td><b>01.05.2014</b><BR>Schlammschlacht hinter der Staffelegg, den Trail über die Hinterlinde als Geheimtipp entdeckt und bei Erich das 29'' Hardtail bestellt :-). Alles guet! </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140413.jpg"></td><td><b>13.04.2014</b><BR>Aus dem alten Kienberger Gips-Bruch ergibt sich ein Blick wie in Kanada. Super-Tour mit feinen, stillen Single-Trails und saftigen Aufstiegen.</td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140409nn.jpg"></td><td><b>09.04.2014</b><BR>Feierabend-Runde auf den höchsten Aargauer Berg - schönes Wetter, schöner Berg, schöne Abfahrt und 1 Peak weniger.</td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140406.jpg"></td><td><b>06.04.2014</b><BR>Bözberg-Rundfahrt mit 2 flachen und 2 spitzigen Peaks und einem 20er-Schnitt.</td></tr></table>
@@ -57,9 +58,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>13.04.2014 14:12</h3>
-          <p class="success">Peaks catched: 19 (28%)</p>
-          <p class="warning">Peaks to catch: 49 (72%)</p>
+		  <h3>01.05.2014 17:12</h3>
+          <p class="success">Peaks catched: 21 (31%)</p>
+          <p class="warning">Peaks to catch: 47 (69%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
