--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <table class="success"><tr><td><img src="./data/pics/20140518.jpg"></td><td><b>18.05.2014</b><BR></td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140509.jpg"></td><td><b>09.05.2014</b><BR>4 500er-Hügel mit 29'' Räder, viel Kartenkontakt und eine richtige Blueschtfahrt. Das obere Fricktal mit all seinen Reizen aufgesogen.</td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140501.jpg"></td><td><b>01.05.2014</b><BR>Schlammschlacht hinter der Staffelegg, den Trail über die Hinterlinde als Geheimtipp entdeckt und bei Erich das 29'' Hardtail bestellt :-). Alles guet! </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140413.jpg"></td><td><b>13.04.2014</b><BR>Aus dem alten Kienberger Gips-Bruch ergibt sich ein Blick wie in Kanada. Super-Tour mit feinen, stillen Single-Trails und saftigen Aufstiegen.</td></tr></table>
@@ -59,9 +60,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>11.05.2014 21:19</h3>
-          <p class="success">Peaks catched: 26 (38%)</p>
-          <p class="warning">Peaks to catch: 43 (62%)</p>
+		  <h3>18.05.2014 21:33</h3>
+          <p class="success">Peaks catched: 32 (46%)</p>
+          <p class="warning">Peaks to catch: 38 (54%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
