--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <table class="success"><tr><td><img src="./data/pics/20140518.jpg"></td><td><b>18.05.2014</b><BR></td></tr></table>
+		  <table class="success"><tr><td><img src="./data/pics/20140518.jpg"></td><td><b>18.05.2014</b><BR>Lange Runde mit Heimweh-Unter-Aaretaler David, den Geissberg als Singletrail-Eldoroda entdeckt und viel frische Luft. merci David fürs mitcho!</td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140509.jpg"></td><td><b>09.05.2014</b><BR>4 500er-Hügel mit 29'' Räder, viel Kartenkontakt und eine richtige Blueschtfahrt. Das obere Fricktal mit all seinen Reizen aufgesogen.</td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140501.jpg"></td><td><b>01.05.2014</b><BR>Schlammschlacht hinter der Staffelegg, den Trail über die Hinterlinde als Geheimtipp entdeckt und bei Erich das 29'' Hardtail bestellt :-). Alles guet! </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140413.jpg"></td><td><b>13.04.2014</b><BR>Aus dem alten Kienberger Gips-Bruch ergibt sich ein Blick wie in Kanada. Super-Tour mit feinen, stillen Single-Trails und saftigen Aufstiegen.</td></tr></table>
