--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <table class="success"><tr><td><img src="./data/pics/20140713.jpg"></td><td><b>13.07.2014</b><BR>55km und 1500m Steigung im Regen - die sechs Peaks's waren heute nicht gestohlen. Der Tiersteiberg war ein Erlebnis und die kleine Kapelle auf dem Bild ein wahrer Kraftort. 
+		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140628.jpg"></td><td><b>28.06.2014</b><BR>Linner Runde mit einer Pannen-Pause. Feine, neu entdeckte Abfahrt vom Zeiher Homberg.
 		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140518.jpg"></td><td><b>18.05.2014</b><BR>Lange Runde mit Heimweh-Unter-Aaretaler David, den Geissberg als Singletrail-Eldoroda entdeckt und viel frische Luft. merci David fürs mitcho!</td></tr></table>
@@ -62,9 +64,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>29.06.2014 21:33</h3>
-          <p class="success">Peaks catched: 36 (52%)</p>
-          <p class="warning">Peaks to catch: 34 (48%)</p>
+		  <h3>13.07.2014 22:24</h3>
+          <p class="success">Peaks catched: 42 (60%)</p>
+          <p class="warning">Peaks to catch: 28 (40%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
