--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
-		  <table class="success"><tr><td><img src="./data/pics/20140720.jpg"></td><td><b>20.07.2014</b><BR>Wieder eine Regen-Runde hinter der Wasserflue über drei unbekannte Hügel. Neue GPS-Tracking-App eingesetzt. 
+		  <table class="success"><tr><td><img src="./data/pics/20140720.jpg"></td><td><b>20.07.2014</b><BR>Wieder eine Regen-Runde hinter der Wasserflue über drei unbekannte Hügel. Neue GPS-Tracking-App eingesetzt und in der Abfahrt nach Oberhof einen Crash mit einem Reh nur haarscharf abgewendet. 
 		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140713.jpg"></td><td><b>13.07.2014</b><BR>55km und 1500m Steigung im Regen - die sechs Peaks's waren heute nicht gestohlen. Der Tiersteiberg war ein Erlebnis und die kleine Kapelle auf dem Bild ein wahrer Kraftort. 
 		  </td></tr></table>
