--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <table class="success"><tr><td><img src="./data/pics/20140723.jpg"></td><td><b>23.07.2014</b><BR>50 schnelle Kilometer über Linner Linde, Bözberg, den Chreisacherturm und über den bisher unbekannten Tafel-Jura-Wald "Marchwald", Bözen, Zeihen, Staffelegg heim gedonnert. Das Foto zeigt, dass auch die langen Catches nicht minder reizvoll sind.
+		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140720.jpg"></td><td><b>20.07.2014</b><BR>Wieder eine Regen-Runde hinter der Wasserflue über drei unbekannte Hügel. Neue GPS-Tracking-App eingesetzt und in der Abfahrt nach Oberhof einen Crash mit einem Reh nur haarscharf abgewendet. 
 		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140713.jpg"></td><td><b>13.07.2014</b><BR>55km und 1500m Steigung im Regen - die sechs Peaks's waren heute nicht gestohlen. Der Tiersteiberg war ein Erlebnis und die kleine Kapelle auf dem Bild ein wahrer Kraftort. 
@@ -66,9 +68,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>20.07.2014 19:53</h3>
-          <p class="success">Peaks catched: 45 (64%)</p>
-          <p class="warning">Peaks to catch: 25 (36%)</p>
+		  <h3>23.07.2014 20:13</h3>
+          <p class="success">Peaks catched: 50 (72%)</p>
+          <p class="warning">Peaks to catch: 20 (28%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
