--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <table class="success"><tr><td><img src="./data/pics/20140907_092149757_iOS.jpg"></td><td><b>7.9. und 14.9.2014</b><BR>Ich bin zurück für den Schlussspurt, nachdem ich die letzten Wochen das Training etwas auf sEiger Bike ausgerichtet und die Jura Park Hügel ohne GPS und Foto-Apparat erklommen habe. In den beiden letzten Catches habe ich je einen Hügel geholt, einerseits plane ich die restlichen nahen zu Fuss zu machen und diejenigen unten am Rhein in zwei langen Touren. Dafür fehlte mir dieses Weekend die Kraft, aber immerhin ist die Tour hinter den Tiersteinberg bereits geplant... Bis später!
+		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140723.jpg"></td><td><b>23.07.2014</b><BR>50 schnelle Kilometer über Linner Linde, Bözberg, den Chreisacherturm und über den bisher unbekannten Tafel-Jura-Wald "Marchwald", Bözen, Zeihen, Staffelegg heim gedonnert. Das Foto zeigt, dass auch die langen Catches nicht minder reizvoll sind.
 		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140720.jpg"></td><td><b>20.07.2014</b><BR>Wieder eine Regen-Runde hinter der Wasserflue über drei unbekannte Hügel. Neue GPS-Tracking-App eingesetzt und in der Abfahrt nach Oberhof einen Crash mit einem Reh nur haarscharf abgewendet. 
@@ -68,9 +70,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>23.07.2014 20:13</h3>
-          <p class="success">Peaks catched: 50 (72%)</p>
-          <p class="warning">Peaks to catch: 20 (28%)</p>
+		  <h3>14.09.2014 21:36</h3>
+          <p class="success">Peaks catched: 52 (75%)</p>
+          <p class="warning">Peaks to catch: 18 (25%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
