--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
         <div class="col_66">
           <h2>"Catches" Blog</h2>
+		  <table class="success"><tr><td><img src="./data/pics/20141101_142810131_iOS.jpg"></td><td><b>1.11.2014</b><BR>Nochmals ein indian-summer-saturday und 20 Spass-KM bei kanppen 1000m Steigung und mit zwei Peaks zu Fuss. Heute war ich endlich mal zuoberst auf dem Herzberg!
+		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20141019_073256048_iOS.jpg"></td><td><b>19.10.2014</b><BR>Das war mehr als das Tüpfli aufs i. Die Monster-Tour rund um den Schupfarter Flugplatz war nicht nur Spass. 75km, knappe 2500 Höhenmeter und viele geschlossene Restaurants strapazierten die Motivation nochmals beträchtlich. Der Kampf zwischen der Herbstsonne und dem Nebel offenbarte aber einige atemberaubende Szenarien und vorallem die Anfahrt ins Fricktal über Tiersteinberg war feines Biking. Ich verlängere die Challenge-Frist auf 30.11., den stressen wäre falsch :-)
 		  </td></tr></table>
 		  <table class="success"><tr><td><img src="./data/pics/20140907_092149757_iOS.jpg"></td><td><b>7.9. und 14.9.2014</b><BR>Ich bin zurück für den Schlussspurt, nachdem ich die letzten Wochen das Training etwas auf sEiger Bike ausgerichtet und die Jura Park Hügel ohne GPS und Foto-Apparat erklommen habe. In den beiden letzten Catches habe ich je einen Hügel geholt, einerseits plane ich die restlichen nahen zu Fuss zu machen und diejenigen unten am Rhein in zwei langen Touren. Dafür fehlte mir dieses Weekend die Kraft, aber immerhin ist die Tour hinter den Tiersteinberg bereits geplant... Bis später!
@@ -72,9 +74,9 @@
 
         <div class="col_33">
           <h2>Aktueller Stand</h2>
-		  <h3>19.10.2014 19:36</h3>
-          <p class="success">Peaks catched: 60 (88%)</p>
-          <p class="warning">Peaks to catch: 8 (12%)</p>
+		  <h3>01.11.2014 19:49</h3>
+          <p class="success">Peaks catched: 62 (91%)</p>
+          <p class="warning">Peaks to catch: 6 (9%)</p>
 		  <h2>Regeln</h2>
           <p class="">Als Berge zählen alle topografischen Erhebungen welche innerhalb einer JuraPark-Gemeinde und über 500 m.ü.M. liegen sowie auf der Landeskarte benannt sind.</p>
           <p class="">Jeder Catch erfolgt von zu Hause aus und ohne fremde Verkehrsmittel. Als fremd gilt alles was nicht zu Fuss oder per Velo bewegt wird.</p>
